--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <a id="about" onclick="about()">About</a>
                     <a id="contact" onclick="contact()">Contact</a>
                     <a href="l.html">Login</a>
-                    <a id="register" onclick="showRegister()">Register</a>
+                    <a href="c.html">Register</a>
                     <i onclick="addItem()" class="fa-sharp fa-solid fa-cart-shopping"></i>
                 </li>
             </ul>
