--- a/index.html
+++ b/index.html
@@ -13,7 +13,135 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Catamaran:wght@200&family=Courgette&family=Edu+TAS+Beginner:wght@700&family=Lato:wght@300;900&family=Mukta:wght@700&family=Mulish:wght@300&family=Open+Sans&family=PT+Sans:ital,wght@1,700&family=Piedra&family=Poppins:wght@300&family=Raleway:wght@100&family=Roboto&family=Roboto+Condensed:wght@700&family=Roboto+Slab&display=swap"
         rel="stylesheet">
+<style>
+    /* Base Styles */
+body, html {
+    margin: 0;
+    padding: 0;
+    font-family: 'Roboto', sans-serif;
+}
 
+.container {
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
+    background-color: #f8f9fa;
+}
+
+nav .logo h1 {
+    margin: 0;
+}
+
+nav ul {
+    display: flex;
+    list-style: none;
+    gap: 15px;
+}
+
+nav ul li {
+    display: flex;
+    align-items: center;
+}
+
+.mainPage {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px;
+}
+
+.mainPage img {
+    max-width: 100%;
+    height: auto;
+}
+
+.cardMen, .cardgirl, .blogContent, .about, .contact {
+    padding: 20px;
+}
+
+.card {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+
+.crd {
+    flex: 1 1 calc(33.333% - 20px);
+    text-align: center;
+}
+
+.crd img {
+    max-width: 100%;
+    height: auto;
+}
+
+.contact .form input, 
+.contact .form button {
+    display: block;
+    width: 100%;
+    margin-bottom: 10px;
+    padding: 10px;
+}
+
+/* Responsive Styles */
+@media screen and (max-width: 992px) {
+    nav ul {
+        flex-direction: column;
+    }
+
+    .mainPage {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .card .crd {
+        flex: 1 1 calc(50% - 20px);
+    }
+}
+
+@media screen and (max-width: 768px) {
+    nav {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    nav ul {
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    .card .crd {
+        flex: 1 1 100%;
+    }
+
+    .contact .connect {
+        flex-direction: column;
+        text-align: center;
+    }
+}
+
+@media screen and (max-width: 576px) {
+    .mainPage img {
+        max-width: 80%;
+        margin: 0 auto;
+    }
+
+    .contact .form input, 
+    .contact .form button {
+        width: 90%;
+        margin: 5px auto;
+    }
+}
+
+</style>
 </head><body>
     <div class="container">
         <nav>
@@ -36,7 +164,7 @@
                 <h1 class="heads">Super Value Deals</h1>
                 <h1>On All Products</h1>
                 <p> FASHION reflects the culture of a country</p>
-                <button>Explore</button>
+              
             </div>
             <img src="m3.png" alt="">
         </div> <div class="cardMen">
@@ -56,7 +184,7 @@
                          </div>
                 </div>
                 <div class="crd">
-                    <img src="srt2.webp" alt="" onclick="showCard(this)">
+                    <img src="srt2.webp" alt="" ">
                     <div class="txt">
                         <h3>COtton Trending Shirt's</h3>
                         <i class="fa-solid fa-star"></i>
@@ -67,7 +195,7 @@
                     </div>
                 </div>
                 <div class="crd">
-                    <img src="srt6.webp" alt="" onclick="showCard(this)">
+                    <img src="srt6.webp" alt="">
                     <div class="txt">
                         <h3>Cotton Trending Shirt's</h3>
                         <i class="fa-solid fa-star"></i>
@@ -84,7 +212,7 @@
 
             <div class="card">
                 <div class="crd">
-                    <img src="wn6.webp" alt="" onclick="showCard(this) ">
+                    <img src="wn6.webp" alt="" ">
                     <div class="txt">
                         <h3>Trending Girl Tops</h3>
                         <i class="fa-solid fa-star"></i>
@@ -96,7 +224,7 @@
                     </div>
                 </div>
                 <div class="crd">
-                    <img src="wn4.webp" alt="" onclick="showCard(this) ">
+                    <img src="wn4.webp" alt=""  ">
                     <div class="txt">
                         <h3>Trending Girl Tops</h3>
                         <i class="fa-solid fa-star"></i>
@@ -108,7 +236,7 @@
                     </div>
                 </div>
                 <div class="crd">
-                    <img src="wn5.webp" alt="" onclick="showCard(this)">
+                    <img src="wn5.webp" alt="" ">
                     <div class="txt">
                         <h3>Trending Girl Tops</h3>
                         <i class="fa-solid fa-star"></i>
@@ -128,9 +256,7 @@
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing.</p>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing.</p>
                 <div class="btn">
-                    <button>Buy Now</button>
-                    <button onclick="addToCart()">Add To Cart</button>
-
+                                                    
                 </div>
                 <div class="btns">
                     <button class="relode" onclick="location.reload()">Back </button>
