--- a/product.html
+++ b/product.html
@@ -170,7 +170,7 @@
 <body>
     <div class="header">
         FASHOHUB
-        <a href="#" class="home-button">Home</a>
+        <a href="index.html" class="home-button">Home</a>
     </div>
 
     <div class="container">
