--- a/payment.html
+++ b/payment.html
@@ -158,7 +158,7 @@
 <body>
     <a href="index.html"><img class="kamal3" src="HOMEE.png" alt="home"></a>
     <div class="kamal1">
-        <img id="kamal9" src="LOGO.jpg" alt="logo">
+        <img id="kamall9" src="LOGO.jpg" alt="logo">
         <h2>FASHOHUB</h2>
         <h3 class="kamal2">Payment Detail</h3>
         <form id="payment-form">
@@ -174,10 +174,7 @@
             <textarea name="" id="kamal5" placeholder="Enter Your Address" required></textarea>
             <br><br>
 
-            <label>Payment Mode</label>
-            <input type="radio" name="payment" id="cash" required>Cash
-            <input type="radio" name="payment" id="online" required>Online
-            <br><br>
+            
 
             <label>Payment Type</label>
             <select name="paymentType" id="paymentType" required>
@@ -185,6 +182,7 @@
                 <option value="2">UPI</option>
                 <option value="3">Card</option>
                 <option value="4">Net Banking</option>
+                <option value="5">Cash on delivery</option>
             </select>
             <br><br>
         </form>
