--- a/payment.html
+++ b/payment.html
@@ -196,11 +196,10 @@
             const name = document.getElementById('kamal1').value.trim();
             const phone = document.querySelector('input[type="number"]').value.trim();
             const address = document.getElementById('kamal5').value.trim();
-            const paymentMode = document.querySelector('input[name="payment"]:checked');
             const paymentType = document.getElementById('paymentType').value;
 
             // Validate the form inputs
-            if (!name || !phone || !address || !paymentMode || paymentType === "1") {
+            if (!name || !phone || !address || !paymentType === "1") {
                 alert("Please fill in all the required fields and choose a payment method.");
                 return;
             }
